  - reduce memory usage
  - fixed several bugs in the teamcode calculation and display
* user interface
  - new option for large glider symbol
  - re-enable the team bearing diff InfoBox
  - fix crash in the waypoint editor
* Windows
  - workaround for PPC2000 bug that caused lockups
* Android
  - fix crash bug after orientation change and resume
* Altair
  - fix UI lag
  - fix default task on startup
  - optionally load XCSoarData from USB drive

Version 6.1 - 2011/05/19
* devices
  - CAI302: read QNH setting
  - Vega: send configured QNH to Vega
  - allow disabling a device explicitly
  - listen for NMEA on TCP port
  - automatically restart FLARM after declaration
  - Stealth mode detection of other FLARM targets
* user interface
  - "pan to" button in waypoint dialog
  - waypoint selection screen shows last used waypoints if no filter is set
  - change the info box geometry without restarting XCSoar
  - change the display orientation without restarting XCSoar
  - tabbed Task dialog with icons or text on tabs per settings
  - new InfoBox configuration dialog
  - configurable aircraft symbol
  - new translations: Danish, Norwegian Bokmal, Romanian
* route planning
  - new optional minimum-time route planning around airspace and terrain.  
    - allows avoidance or terrain, airspace or both
    - takes final glide and cruise-climb portions of flight into account
  - Configuration in Route Planner page of settings.  
    - Feature is by default disabled.
    - See settings help text for configuration options
  - Limitations of current version:
    - does not update the final glide bar, task times etc for any obstacle deviations
    - does not handle aircraft or destination location inside airspace
    - does not allow paths with course deviations greater than 90 degrees each leg.
    - some "jumping" of the solution may be experienced as altitude/location changes.
* reach (glide terrain footprint)