@@ -15,6 +15,7 @@ Version 6.1.1 - not yet released
   - workaround for PPC2000 bug that caused lockups
 * Android
   - fix crash bug after orientation change and resume
+  - support non-standard SD card mount points
 * Altair
   - fix UI lag
   - fix default task on startup
